# delimclean

./: LICENSE  README.md  pyproject.toml
delimclean/: cli.py
