[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "delimclean"
version = "1.0.0"
description = "CLI tool to clean delimited files by skipping rows and keeping columns"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pandas",
]

[project.scripts]
delimclean = "delimclean.cli:main"